画像のスライド表示：HTML完了

--- a/src/index.html
+++ b/src/index.html
@@ -647,7 +647,12 @@
 
               <div class="voice-card__right">
                 <div class="voice-card__img">
-                  <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
+
+                  <div class="img-animation__wrap js-img-animation__wrap">
+                    <img class="img-animation__img js-img-animation__img" src="./assets/images/common/voice_1.jpg"
+                      alt="笑顔の女性の顔写真">
+                    <div class="img-animation__bg js-img-animation__bg"></div>
+                  </div>
                 </div>
               </div>
 
@@ -683,7 +688,12 @@
 
               <div class="voice-card__right">
                 <div class="voice-card__img">
-                  <img src="./assets/images/common/voice_2.jpg" alt="笑顔の女性の顔写真">
+
+                  <div class="img-animation__wrap js-img-animation__wrap">
+                    <img class="img-animation__img js-img-animation__img" src="./assets/images/common/voice_2.jpg"
+                      alt="笑顔の男性の顔写真">
+                    <div class="img-animation__bg js-img-animation__bg"></div>
+                  </div>
                 </div>
               </div>
 
@@ -721,32 +731,13 @@
 
         <div class="price__wrap">
 
-          <!-- <div class="price__img">
-            <picture>
+          <div class="img-animation__wrap js-img-animation__wrap">
+            <picture class="img-animation__img js-img-animation__img">
               <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/price_sp.jpg" alt="">
             </picture>
-          </div> -->
-
-
-          <div class="img-animation__wrap js-img-animation__wrap">
-
-            <div class="price__img img-animation__img js-img-animation__img">
-              <picture>
-                <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)">
-                <img src="./assets/images/common/price_sp.jpg" alt="">
-              </picture>
-              <div class="img-animation__bg js-img-animation__bg"></div>
-            </div>
-            <!-- <div class="info__img img-animation__img js-img-animation__img">
-              <picture>
-                <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
-                <img src="./assets/images/common/info_sp.jpg" alt="">
-              </picture>
-            </div> -->
+            <div class="img-animation__bg js-img-animation__bg"></div>
           </div>
-
-
 
           <dl class="price__items">
 
