ピクパ：MVまで

--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                     <a href="#info">ダイビング情報</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">ライセンス講習</a></li>
                     <li><a href="#">体験ダイビング</a></li>
                     <li><a href="#">ファンダイビング</a></li>
                   </ul>
@@ -208,7 +208,7 @@
                     <a href="#price">料金一覧</a>
                   </div>
                   <ul class="menu__list">
-                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">ライセンス講習</a></li>
                     <li><a href="#">体験ダイビング</a></li>
                     <li><a href="#">ファンダイビング</a></li>
                   </ul>
@@ -989,7 +989,7 @@
                       <a href="#price">料金一覧</a>
                     </div>
                     <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
+                      <li><a href="#">ライセンス講習</a></li>
                       <li><a href="#">体験ダイビング</a></li>
                       <li><a href="#">ファンダイビング</a></li>
                     </ul>
