ピクパ：途中

--- a/src/index.html
+++ b/src/index.html
@@ -580,7 +580,7 @@
                 <p>ライセンス取得</p>
               </div>
               <div class="blog-card__text">
-                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
             </div>
@@ -596,7 +596,7 @@
                 <p>ウミガメと泳ぐ</p>
               </div>
               <div class="blog-card__text">
-                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
             </div>
