表示崩れの修正途中

--- a/src/index.html
+++ b/src/index.html
@@ -333,7 +333,7 @@
         </div>
 
         <div class="swiper campaign__swiper js-campaign__swiper">
-          <div class="swiper-wrapper">
+          <div class="swiper-wrapper campaign-cards">
 
             <div class="swiper-slide campaign__card campaign-card">
               <div class="campaign-card__img">
