ピクパ：フッター以外完了

--- a/src/index.html
+++ b/src/index.html
@@ -612,7 +612,7 @@
                 <p>カクレクマノミ</p>
               </div>
               <div class="blog-card__text">
-                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                <p class="blog-card__text-text text">ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
                   ここにテキストが入ります。ここにテキストが入ります。ここにテキスト</p>
               </div>
             </div>
@@ -865,7 +865,7 @@
 
             <div class="contact__title section-title">
               <h2 class="section-title__eng">Contact</h2>
-              <p class="section-title__ja">お問合せ</p>
+              <p class="section-title__ja">お問い合せ</p>
             </div>
 
             <div class="contact__msg">
@@ -874,7 +874,7 @@
               </p>
             </div>
 
-            <div class="contact__btn ">
+            <div class="contact__btn">
               <a href="#" class="button">
                 <p>Contact us</p>
               </a>
