drawer,footer：修正

--- a/src/index.html
+++ b/src/index.html
@@ -132,130 +132,128 @@
     </div>
 
     <!-- ドロワーメニュー -->
-    <nav class="header__nav nav js-nav">
+    <nav class="header__sp-nav sp-nav js-sp-nav">
 
-      <div class="nav__logoBlock">
+      <div class="sp-nav__logoBlock">
         <a href="">
-          <img class="nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="sp-nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </div>
 
-      <div class="nav__inner">
-        <div class="nav__wrap">
+      <div class="sp-nav__inner">
+        <div class="sp-nav__wrap">
 
-          <div class="nav__body">
+          <!-- <div class="sp-nav__body"> -->
 
-            <div class="nav__menu-items menu">
+          <div class="sp-nav__menu-items menu">
 
-              <div class="nav__menu-item menu__column">
+            <div class="sp-nav__menu-item menu__column">
 
-                <div class="menu__item">
-                  <div class="menu__title">
-                    <a href="#campaign">キャンペーン</a>
-                  </div>
-                  <ul class="menu__list">
-                    <li><a href="#">ライセンス取得</a></li>
-                    <li><a href="#">貸切体験ダイビング</a></li>
-                    <li><a href="#">ナイトダイビング</a></li>
-                  </ul>
+              <div class="menu__item">
+                <div class="menu__title">
+                  <a href="#campaign">キャンペーン</a>
                 </div>
+                <ul class="menu__list">
+                  <li><a href="#">ライセンス取得</a></li>
+                  <li><a href="#">貸切体験ダイビング</a></li>
+                  <li><a href="#">ナイトダイビング</a></li>
+                </ul>
+              </div>
 
-                <div class="menu__item">
+              <div class="menu__item">
 
-                  <div class="menu__title">
-                    <a href="#about">私たちについて</a>
-                  </div>
-
+                <div class="menu__title">
+                  <a href="#about">私たちについて</a>
                 </div>
 
               </div>
 
-              <div class="nav__menu-item menu__column">
+            </div>
 
-                <div class="menu__item">
-                  <div class="menu__title">
-                    <a href="#info">ダイビング情報</a>
-                  </div>
-                  <ul class="menu__list">
-                    <li><a href="#">ライセンス講習</a></li>
-                    <li><a href="#">体験ダイビング</a></li>
-                    <li><a href="#">ファンダイビング</a></li>
-                  </ul>
+            <div class="nav__menu-item menu__column">
+
+              <div class="menu__item">
+                <div class="menu__title">
+                  <a href="#info">ダイビング情報</a>
                 </div>
+                <ul class="menu__list">
+                  <li><a href="#">ライセンス講習</a></li>
+                  <li><a href="#">体験ダイビング</a></li>
+                  <li><a href="#">ファンダイビング</a></li>
+                </ul>
+              </div>
 
-                <div class="menu__item">
+              <div class="menu__item">
 
-                  <div class="menu__title">
-                    <a href="#blog">ブログ</a>
-                  </div>
-
+                <div class="menu__title">
+                  <a href="#blog">ブログ</a>
                 </div>
 
               </div>
 
-              <div class="nav__menu-item menu__column">
+            </div>
 
-                <div class="menu__item">
+            <div class="nav__menu-item menu__column">
 
-                  <div class="menu__title">
-                    <a href="#voice">お客様の声</a>
-                  </div>
+              <div class="menu__item">
 
-                </div>
-
-                <div class="menu__item">
-                  <div class="menu__title">
-                    <a href="#price">料金一覧</a>
-                  </div>
-                  <ul class="menu__list">
-                    <li><a href="#">ライセンス講習</a></li>
-                    <li><a href="#">体験ダイビング</a></li>
-                    <li><a href="#">ファンダイビング</a></li>
-                  </ul>
+                <div class="menu__title">
+                  <a href="#voice">お客様の声</a>
                 </div>
 
               </div>
 
-              <div class="nav__menu-item menu__column">
+              <div class="menu__item">
+                <div class="menu__title">
+                  <a href="#price">料金一覧</a>
+                </div>
+                <ul class="menu__list">
+                  <li><a href="#">ライセンス講習</a></li>
+                  <li><a href="#">体験ダイビング</a></li>
+                  <li><a href="#">ファンダイビング</a></li>
+                </ul>
+              </div>
 
-                <div class="menu__item">
+            </div>
 
-                  <div class="menu__title">
-                    <a href="">よくある質問</a>
-                  </div>
+            <div class="nav__menu-item menu__column">
 
+              <div class="menu__item">
+
+                <div class="menu__title">
+                  <a href="">よくある質問</a>
                 </div>
 
-                <div class="menu__item">
+              </div>
 
-                  <div class="menu__title">
-                    <a href="">プライバシー<br>ポリシー</a>
-                  </div>
+              <div class="menu__item">
 
+                <div class="menu__title">
+                  <a href="">プライバシー<br>ポリシー</a>
                 </div>
 
-                <div class="menu__item">
+              </div>
 
-                  <div class="menu__title">
-                    <a href="">利用規約</a>
-                  </div>
+              <div class="menu__item">
 
+                <div class="menu__title">
+                  <a href="">利用規約</a>
                 </div>
 
-                <div class="menu__item">
+              </div>
 
-                  <div class="menu__title">
-                    <a href="#contact">お問い合わせ</a>
-                  </div>
+              <div class="menu__item">
 
+                <div class="menu__title">
+                  <a href="#contact">お問い合わせ</a>
                 </div>
 
-                <div class="menu__item">
+              </div>
 
-                  <div class="menu__title">
-                    <a href="#contact">サイトマップ</a>
-                  </div>
+              <div class="menu__item">
 
+                <div class="menu__title">
+                  <a href="#contact">サイトマップ</a>
                 </div>
 
               </div>
@@ -263,6 +261,8 @@
             </div>
 
           </div>
+
+          <!-- </div> -->
         </div>
       </div>
     </nav>
@@ -887,48 +887,48 @@
       </div>
     </section>
 
+    <div class="to-top" id="page-top">
+      <a href="#top"><span></span></a>
+    </div>
+
   </main>
 
   <footer class="footer">
-    <div class="footer__inner inner">
+    <div class="footer__inner">
       <!-- <div class="footer__wrap"> -->
-      <nav class="footer__nav nav">
+      <div class="footer__head">
+        <div class="footer__logoBlock">
+          <a href="">
+            <img class="nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          </a>
+        </div>
 
-        <div class="footer__head">
-          <div class="footer__logoBlock">
-            <a href="">
-              <img class="nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
-            </a>
-          </div>
-
-          <div class="footer__sns">
-            <div class="footer__sns-items">
-              <div class="footer__sns-item">
-                <a href="" class="footer__sns-link" aria-label="" target="_blank">
-                  <img src="./assets/images/common/icon-facebook.svg" alt="">
-                </a>
-              </div>
-              <div class="footer__sns-item">
-                <a href="" class="footer__sns-link" aria-label="" target="_blank">
-                  <img src="./assets/images/common/icon-instagram.svg" alt="">
-                </a>
-              </div>
+        <div class="footer__sns">
+          <div class="footer__sns-items">
+            <div class="footer__sns-item">
+              <a href="" class="footer__sns-link" aria-label="" target="_blank">
+                <img src="./assets/images/common/icon-facebook.svg" alt="">
+              </a>
+            </div>
+            <div class="footer__sns-item">
+              <a href="" class="footer__sns-link" aria-label="" target="_blank">
+                <img src="./assets/images/common/icon-instagram.svg" alt="">
+              </a>
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="to-top" id="page-top">
-          <a href="#top"><span></span></a>
-        </div>
+      <nav class="footer__ft-nav sp-nav">
 
-        <div class="footer__nav-inner nav__inner">
-          <div class="footer__nav-wrap nav__wrap">
+        <div class="footer__sp-nav-inner sp-nav__inner">
+          <div class="footer__sp-nav-wrap sp-nav__wrap sp-nav__wrap--footer">
 
-            <div class="nav__body">
+            <div class="sp-nav__body">
 
-              <div class="nav__menu-items menu">
+              <div class="sp-nav__menu-items menu">
 
-                <div class="nav__menu-item menu__column">
+                <div class="sp-nav__menu-item menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
