不要コメントの削除

--- a/src/index.html
+++ b/src/index.html
@@ -131,7 +131,7 @@
 
     </div>
 
-    <!-- ドロワーメニュー -->
+    <!-- drawer -->
     <nav class="header__sp-nav sp-nav js-sp-nav">
 
       <div class="sp-nav__logoBlock">
@@ -142,8 +142,6 @@
 
       <div class="sp-nav__inner">
         <div class="sp-nav__wrap">
-
-          <!-- <div class="sp-nav__body"> -->
 
           <div class="sp-nav__menu-items menu">
 
@@ -262,7 +260,6 @@
 
           </div>
 
-          <!-- </div> -->
         </div>
       </div>
     </nav>
@@ -502,7 +499,6 @@
 
         </div>
 
-
       </div>
 
     </section>
@@ -523,22 +519,6 @@
             </picture>
             <div class="img-animation__bg js-img-animation__bg"></div>
           </div>
-
-          <!-- テスト用 -->
-          <!-- <div class="animation-test">
-          <div class="animation-box1">画像</div>
-          <div class="animation-box2">背景色</div>
-        </div>
-        <br>
-        <div class="animation-test">
-          <div class="animation-box1">画像</div>
-          <div class="animation-box2">背景色</div>
-        </div>
-        <br>
-        <div class="animation-test">
-          <div class="animation-box1">画像</div>
-          <div class="animation-box2">背景色</div>
-        </div> -->
 
           <div class="info__body">
             <div class="info__title title-line">
@@ -895,7 +875,7 @@
 
   <footer class="footer">
     <div class="footer__inner">
-      <!-- <div class="footer__wrap"> -->
+
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="">
