headerのリンクの修正

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     <div class="header__inner">
 
       <h1 class="header__logoBlock">
-        <a href="">
+        <a href="#" class="header__logoLink">
           <img class="header__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </h1>
@@ -110,7 +110,7 @@
             </a>
           </li>
           <li class="pc-nav__item">
-            <a href="#contact">
+            <a href="#">
               <div class="pc-nav__title">
                 <p class="pc-nav__eng">FAQ</p>
                 <p class="pc-nav__ja">よくある質問</p>
