細かな修正

--- a/src/index.html
+++ b/src/index.html
@@ -851,7 +851,7 @@
 
             <div class="contact__title section-title">
               <h2 class="section-title__eng">Contact</h2>
-              <p class="section-title__ja">お問い合せ</p>
+              <p class="section-title__ja">お問い合わせ</p>
             </div>
 
             <div class="contact__msg">
