--- a/src/index.html
+++ b/src/index.html
@@ -145,113 +145,122 @@
 
           <div class="sp-nav__menu-items menu">
 
-            <div class="sp-nav__menu-item menu__column">
 
-              <div class="menu__item">
-                <div class="menu__title">
-                  <a href="#campaign">キャンペーン</a>
+            <div class="sp-nav__menu-items-wrap menu-wrap">
+
+              <div class="sp-nav__menu-item menu__column">
+
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#campaign">キャンペーン</a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス取得</a></li>
+                    <li><a href="#">貸切体験ダイビング</a></li>
+                    <li><a href="#">ナイトダイビング</a></li>
+                  </ul>
                 </div>
-                <ul class="menu__list">
-                  <li><a href="#">ライセンス取得</a></li>
-                  <li><a href="#">貸切体験ダイビング</a></li>
-                  <li><a href="#">ナイトダイビング</a></li>
-                </ul>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#about">私たちについて</a>
+                  </div>
+
+                </div>
+
               </div>
 
-              <div class="menu__item">
+              <div class="sp-nav__menu-item menu__column">
 
-                <div class="menu__title">
-                  <a href="#about">私たちについて</a>
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#info">ダイビング情報</a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス講習</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
+                  </ul>
+                </div>
+
+                <div class="menu__item">
+
+                  <div class="menu__title">
+                    <a href="#blog">ブログ</a>
+                  </div>
+
                 </div>
 
               </div>
 
             </div>
 
-            <div class="nav__menu-item menu__column">
+            <div class="sp-nav__menu-items-wrap menu-wrap">
 
-              <div class="menu__item">
-                <div class="menu__title">
-                  <a href="#info">ダイビング情報</a>
-                </div>
-                <ul class="menu__list">
-                  <li><a href="#">ライセンス講習</a></li>
-                  <li><a href="#">体験ダイビング</a></li>
-                  <li><a href="#">ファンダイビング</a></li>
-                </ul>
-              </div>
+              <div class="sp-nav__menu-item menu__column">
 
-              <div class="menu__item">
+                <div class="menu__item">
 
-                <div class="menu__title">
-                  <a href="#blog">ブログ</a>
+                  <div class="menu__title">
+                    <a href="#voice">お客様の声</a>
+                  </div>
+
                 </div>
 
-              </div>
-
-            </div>
-
-            <div class="nav__menu-item menu__column">
-
-              <div class="menu__item">
-
-                <div class="menu__title">
-                  <a href="#voice">お客様の声</a>
+                <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#price">料金一覧</a>
+                  </div>
+                  <ul class="menu__list">
+                    <li><a href="#">ライセンス講習</a></li>
+                    <li><a href="#">体験ダイビング</a></li>
+                    <li><a href="#">ファンダイビング</a></li>
+                  </ul>
                 </div>
 
               </div>
 
-              <div class="menu__item">
-                <div class="menu__title">
-                  <a href="#price">料金一覧</a>
-                </div>
-                <ul class="menu__list">
-                  <li><a href="#">ライセンス講習</a></li>
-                  <li><a href="#">体験ダイビング</a></li>
-                  <li><a href="#">ファンダイビング</a></li>
-                </ul>
-              </div>
+              <div class="sp-nav__menu-item menu__column">
 
-            </div>
+                <div class="menu__item">
 
-            <div class="nav__menu-item menu__column">
+                  <div class="menu__title">
+                    <a href="#">よくある質問</a>
+                  </div>
 
-              <div class="menu__item">
-
-                <div class="menu__title">
-                  <a href="#">よくある質問</a>
                 </div>
 
-              </div>
+                <div class="menu__item">
 
-              <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#">プライバシー<br>ポリシー</a>
+                  </div>
 
-                <div class="menu__title">
-                  <a href="#">プライバシー<br>ポリシー</a>
                 </div>
 
-              </div>
+                <div class="menu__item">
 
-              <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#">利用規約</a>
+                  </div>
 
-                <div class="menu__title">
-                  <a href="#">利用規約</a>
                 </div>
 
-              </div>
+                <div class="menu__item">
 
-              <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#contact">お問い合わせ</a>
+                  </div>
 
-                <div class="menu__title">
-                  <a href="#contact">お問い合わせ</a>
                 </div>
 
-              </div>
+                <div class="menu__item">
 
-              <div class="menu__item">
+                  <div class="menu__title">
+                    <a href="#contact">サイトマップ</a>
+                  </div>
 
-                <div class="menu__title">
-                  <a href="#contact">サイトマップ</a>
                 </div>
 
               </div>
@@ -885,7 +894,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="#">
-            <img class="nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </div>
 
@@ -905,16 +914,21 @@
         </div>
       </div>
 
-      <nav class="footer__ft-nav sp-nav">
+      <nav class="footer__ft-nav ft-nav">
 
-        <div class="footer__sp-nav-inner sp-nav__inner">
-          <div class="footer__sp-nav-wrap sp-nav__wrap sp-nav__wrap--footer">
+        <!-- <div class="footer__ft-nav-inner ft-nav__inner">
+          <div class="footer__ft-nav-wrap ft-nav__wrap ft-nav__wrap--footer"> -->
 
-            <div class="sp-nav__body">
+        <div class="ft-nav__inner">
+          <div class="ft-nav__wrap">
 
-              <div class="sp-nav__menu-items menu">
+            <div class="ft-nav__body">
 
-                <div class="sp-nav__menu-item menu__column">
+              <div class="ft-nav__menu-items menu">
+
+                <!-- <div class="ft-nav__menu-items-left menu__left"> -->
+
+                <div class="ft-nav__menu-item menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -937,7 +951,7 @@
 
                 </div>
 
-                <div class="nav__menu-item menu__column">
+                <div class="ft-nav__menu-item menu__column">
 
                   <div class="menu__item">
                     <div class="menu__title">
@@ -960,7 +974,11 @@
 
                 </div>
 
-                <div class="nav__menu-item menu__column">
+                <!-- </div> -->
+
+                <!-- <div class="ft-nav__menu-items-left menu__right"> -->
+
+                <div class="ft-nav__menu-item menu__column">
 
                   <div class="menu__item">
 
@@ -983,7 +1001,7 @@
 
                 </div>
 
-                <div class="nav__menu-item menu__column">
+                <div class="ft-nav__menu-item menu__column">
 
                   <div class="menu__item">
 
@@ -1026,6 +1044,8 @@
                   </div>
 
                 </div>
+                <!-- 
+                </div> -->
 
               </div>
 
