--- a/src/index.html
+++ b/src/index.html
@@ -916,9 +916,6 @@
 
       <nav class="footer__ft-nav ft-nav">
 
-        <!-- <div class="footer__ft-nav-inner ft-nav__inner">
-          <div class="footer__ft-nav-wrap ft-nav__wrap ft-nav__wrap--footer"> -->
-
         <div class="ft-nav__inner">
           <div class="ft-nav__wrap">
 
@@ -926,126 +923,126 @@
 
               <div class="ft-nav__menu-items menu">
 
-                <!-- <div class="ft-nav__menu-items-left menu__left"> -->
+                <div class="ft-nav__menu-items-wrap menu-wrap">
 
-                <div class="ft-nav__menu-item menu__column">
+                  <div class="ft-nav__menu-item menu__column">
 
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#campaign">キャンペーン</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
-                      <li><a href="#">貸切体験ダイビング</a></li>
-                      <li><a href="#">ナイトダイビング</a></li>
-                    </ul>
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#about">私たちについて</a>
+                    <div class="menu__item">
+                      <div class="menu__title">
+                        <a href="#campaign">キャンペーン</a>
+                      </div>
+                      <ul class="menu__list">
+                        <li><a href="#">ライセンス取得</a></li>
+                        <li><a href="#">貸切体験ダイビング</a></li>
+                        <li><a href="#">ナイトダイビング</a></li>
+                      </ul>
                     </div>
 
-                  </div>
+                    <div class="menu__item">
 
-                </div>
+                      <div class="menu__title">
+                        <a href="#about">私たちについて</a>
+                      </div>
 
-                <div class="ft-nav__menu-item menu__column">
-
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#info">ダイビング情報</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス取得</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
-                    </ul>
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#blog">ブログ</a>
                     </div>
 
                   </div>
 
-                </div>
+                  <div class="ft-nav__menu-item menu__column">
 
-                <!-- </div> -->
-
-                <!-- <div class="ft-nav__menu-items-left menu__right"> -->
-
-                <div class="ft-nav__menu-item menu__column">
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#voice">お客様の声</a>
+                    <div class="menu__item">
+                      <div class="menu__title">
+                        <a href="#info">ダイビング情報</a>
+                      </div>
+                      <ul class="menu__list">
+                        <li><a href="#">ライセンス取得</a></li>
+                        <li><a href="#">体験ダイビング</a></li>
+                        <li><a href="#">ファンダイビング</a></li>
+                      </ul>
                     </div>
 
-                  </div>
+                    <div class="menu__item">
 
-                  <div class="menu__item">
-                    <div class="menu__title">
-                      <a href="#price">料金一覧</a>
-                    </div>
-                    <ul class="menu__list">
-                      <li><a href="#">ライセンス講習</a></li>
-                      <li><a href="#">体験ダイビング</a></li>
-                      <li><a href="#">ファンダイビング</a></li>
-                    </ul>
-                  </div>
+                      <div class="menu__title">
+                        <a href="#blog">ブログ</a>
+                      </div>
 
-                </div>
-
-                <div class="ft-nav__menu-item menu__column">
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">よくある質問</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#">利用規約</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#contact">お問い合わせ</a>
-                    </div>
-
-                  </div>
-
-                  <div class="menu__item">
-
-                    <div class="menu__title">
-                      <a href="#contact">サイトマップ</a>
                     </div>
 
                   </div>
 
                 </div>
-                <!-- 
-                </div> -->
+
+                <div class="ft-nav__menu-items-wrap menu-wrap">
+
+                  <div class="ft-nav__menu-item menu__column">
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#voice">お客様の声</a>
+                      </div>
+
+                    </div>
+
+                    <div class="menu__item">
+                      <div class="menu__title">
+                        <a href="#price">料金一覧</a>
+                      </div>
+                      <ul class="menu__list">
+                        <li><a href="#">ライセンス講習</a></li>
+                        <li><a href="#">体験ダイビング</a></li>
+                        <li><a href="#">ファンダイビング</a></li>
+                      </ul>
+                    </div>
+
+                  </div>
+
+                  <div class="ft-nav__menu-item menu__column">
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#">よくある質問</a>
+                      </div>
+
+                    </div>
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#">プライバシー<br class="u-mobile">ポリシー</a>
+                      </div>
+
+                    </div>
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#">利用規約</a>
+                      </div>
+
+                    </div>
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#contact">お問い合わせ</a>
+                      </div>
+
+                    </div>
+
+                    <div class="menu__item">
+
+                      <div class="menu__title">
+                        <a href="#contact">サイトマップ</a>
+                      </div>
+
+                    </div>
+
+                  </div>
+
+                </div>
 
               </div>
 
@@ -1060,6 +1057,7 @@
     <div class="footer__copyright">
       <p>Copyright &copy; 2021 - 2023 CodeUps LLC. All Rights Reserved.</p>
     </div>
+
   </footer>
 </body>
 
