アニメーションの調整、微修正

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
       <h1 class="header__logoBlock">
         <a href="#" class="header__logoLink">
-          <img class="header__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="header__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </h1>
 
@@ -136,7 +136,7 @@
 
       <div class="sp-nav__logoBlock">
         <a href="">
-          <img class="sp-nav__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          <img class="sp-nav__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
         </a>
       </div>
 
@@ -288,26 +288,26 @@
               <div class="swiper-wrapper mv__swiper-wrapper">
                 <div class="swiper-slide mv__swiper-img">
                   <picture>
-                    <source srcset="../assets/images/common/mv_pc_1.jpg" media="(min-width:768px)">
-                    <img src="../assets/images/common/mv_sp_1.jpg" alt="大きな亀が海で泳いでいる様子">
+                    <source srcset="./assets/images/common/mv_pc_1.jpg" media="(min-width:768px)">
+                    <img src="./assets/images/common/mv_sp_1.jpg" alt="大きな亀が海で泳いでいる様子">
                   </picture>
                 </div>
                 <div class="swiper-slide mv__swiper-img">
                   <picture>
-                    <source srcset="../assets/images/common/mv_pc_2.jpg" media="(min-width:768px)">
-                    <img src="../assets/images/common/mv_sp_2.jpg" alt="ダイバーと亀が水中で泳いでいる様子">
+                    <source srcset="./assets/images/common/mv_pc_2.jpg" media="(min-width:768px)">
+                    <img src="./assets/images/common/mv_sp_2.jpg" alt="ダイバーと亀が水中で泳いでいる様子">
                   </picture>
                 </div>
                 <div class="swiper-slide mv__swiper-img">
                   <picture>
-                    <source srcset="../assets/images/common/mv_pc_3.jpg" media="(min-width:768px)">
-                    <img src="../assets/images/common/mv_sp_3.jpg" alt="海と山と空の風景">
+                    <source srcset="./assets/images/common/mv_pc_3.jpg" media="(min-width:768px)">
+                    <img src="./assets/images/common/mv_sp_3.jpg" alt="海と山と空の風景">
                   </picture>
                 </div>
                 <div class="swiper-slide mv__swiper-img">
                   <picture>
-                    <source srcset="../assets/images/common/mv_pc_4.jpg" media="(min-width:768px)">
-                    <img src="../assets/images/common/mv_sp_4.jpg" alt="綺麗な砂浜と青空の風景">
+                    <source srcset="./assets/images/common/mv_pc_4.jpg" media="(min-width:768px)">
+                    <img src="./assets/images/common/mv_sp_4.jpg" alt="綺麗な砂浜と青空の風景">
                   </picture>
                 </div>
               </div>
@@ -522,7 +522,7 @@
 
         <div class="info__wrap">
           <div class="info__img img-animation__wrap js-img-animation__wrap">
-            <picture class="img-animation__img js-img-animation__img">
+            <picture class="img-animation__img img-animation__img--pic js-img-animation__img">
               <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/info_sp.jpg" alt="透き通った海を泳ぐ熱帯魚">
             </picture>
@@ -738,12 +738,13 @@
         <div class="price__wrap">
 
           <div class="price__img img-animation__wrap js-img-animation__wrap">
-            <picture class="img-animation__img js-img-animation__img">
-              <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)">
+            <picture class="img-animation__img img-animation__img--pic js-img-animation__img">
+              <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)" alt="赤い熱帯魚の群れが泳いでいる様子">
               <img src="./assets/images/common/price_sp.jpg" alt="海亀が海中を泳いでいる様子">
             </picture>
             <div class="img-animation__bg js-img-animation__bg"></div>
           </div>
+
 
           <dl class="price__items">
 
@@ -836,7 +837,7 @@
           <div class="contact__top">
 
             <div class="contact__logoBlock title-line">
-              <img class="contact__logo" src="../assets/images/common/logo-green.png" alt="ヘッダーロゴ">
+              <img class="contact__logo" src="./assets/images/common/logo-green.png" alt="ヘッダーロゴ">
             </div>
 
             <div class="contact__flex">
@@ -894,7 +895,7 @@
       <div class="footer__head">
         <div class="footer__logoBlock">
           <a href="#">
-            <img class="footer__logo" src="../assets/images/common/logo.svg" alt="ヘッダーロゴ">
+            <img class="footer__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
           </a>
         </div>
 
