safari/firefoxの表示崩れ修正

--- a/src/index.html
+++ b/src/index.html
@@ -134,10 +134,12 @@
     <!-- drawer -->
     <nav class="header__sp-nav sp-nav js-sp-nav">
 
-      <div class="sp-nav__logoBlock">
-        <a href="">
-          <img class="sp-nav__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
-        </a>
+      <div class="sp-nav__head">
+        <div class="sp-nav__logoBlock">
+          <a href="">
+            <img class="sp-nav__logo" src="./assets/images/common/logo.svg" alt="ヘッダーロゴ">
+          </a>
+        </div>
       </div>
 
       <div class="sp-nav__inner">
