--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
   <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- invew -->
+  <script src="./assets/js/jquery.inview.min.js"></script>
   <!-- Original JS -->
   <script defer src="./assets/js/script.js"></script>
   <script defer src="./assets/js/gsap.js"></script>
@@ -747,6 +749,16 @@
             <div class="img-animation__bg js-img-animation__bg"></div>
           </div>
 
+          <div class="colorbox test1">
+            <img src="https://bit.ly/2XDppXR" alt="">
+          </div>
+
+          <div class="colorbox test2">
+            <picture>
+              <source srcset="https://bit.ly/2XDppXR" media="(min-width:768px)" alt="赤い熱帯魚の群れが泳いでいる様子">
+              <img src="https://bit.ly/2XDppXR" alt="海亀が海中を泳いでいる様子">
+            </picture>
+          </div>
 
           <dl class="price__items">
 
