--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,8 @@
   <!-- GSAP -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <!-- inview -->
+  <script defer src="./assets/js/jquery.inview.min.js"></script>
   <!-- Original JS -->
   <script defer src="./assets/js/script.js"></script>
   <script defer src="./assets/js/gsap.js"></script>
