--- a/src/index.html
+++ b/src/index.html
@@ -525,12 +525,18 @@
         </div>
 
         <div class="info__wrap">
-          <div class="info__img img-animation__wrap js-img-animation__wrap">
+          <!-- <div class="info__img img-animation__wrap js-img-animation__wrap">
             <picture class="img-animation__img img-animation__img--pic js-img-animation__img">
               <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/info_sp.jpg" alt="透き通った海を泳ぐ熱帯魚">
             </picture>
             <div class="img-animation__bg js-img-animation__bg"></div>
+          </div> -->
+          <div class="info__img colorbox js-colorbox">
+            <picture>
+              <source srcset="./assets/images/common/info_pc.jpg" media="(min-width:768px)">
+              <img src="./assets/images/common/info_sp.jpg" alt="透き通った海を泳ぐ熱帯魚">
+            </picture>
           </div>
 
           <div class="info__body">
@@ -656,13 +662,17 @@
               </div>
 
               <div class="voice-card__right">
-                <div class="voice-card__img">
+                <!-- <div class="voice-card__img">
 
                   <div class="img-animation__wrap js-img-animation__wrap">
                     <img class="img-animation__img js-img-animation__img" src="./assets/images/common/voice_1.jpg"
                       alt="笑顔の女性の顔写真">
                     <div class="img-animation__bg js-img-animation__bg"></div>
                   </div>
+                  
+                </div> -->
+                <div class="voice-card__img colorbox js-colorbox">
+                  <img src="./assets/images/common/voice_1.jpg" alt="笑顔の女性の顔写真">
                 </div>
               </div>
 
@@ -697,13 +707,16 @@
               </div>
 
               <div class="voice-card__right">
-                <div class="voice-card__img">
+                <!-- <div class="voice-card__img">
 
                   <div class="img-animation__wrap js-img-animation__wrap">
                     <img class="img-animation__img js-img-animation__img" src="./assets/images/common/voice_2.jpg"
                       alt="笑顔の男性の顔写真">
                     <div class="img-animation__bg js-img-animation__bg"></div>
                   </div>
+                </div> -->
+                <div class="voice-card__img colorbox js-colorbox">
+                  <img src="./assets/images/common/voice_2.jpg" alt="笑顔の男性の顔写真">
                 </div>
               </div>
 
@@ -740,13 +753,20 @@
         </div>
 
         <div class="price__wrap">
-
+          <!-- 
           <div class="price__img img-animation__wrap js-img-animation__wrap">
             <picture class="img-animation__img img-animation__img--pic js-img-animation__img">
               <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)" alt="赤い熱帯魚の群れが泳いでいる様子">
               <img src="./assets/images/common/price_sp.jpg" alt="海亀が海中を泳いでいる様子">
             </picture>
             <div class="img-animation__bg js-img-animation__bg"></div>
+          </div> -->
+
+          <div class="price__img colorbox js-colorbox">
+            <picture>
+              <source srcset="./assets/images/common/price_pc.jpg" media="(min-width:768px)" alt="赤い熱帯魚の群れが泳いでいる様子">
+              <img src="./assets/images/common/price_sp.jpg" alt="海亀が海中を泳いでいる様子">
+            </picture>
           </div>
 
 
