fix：h2タグを日本語の方に当てる

--- a/src/index.html
+++ b/src/index.html
@@ -338,8 +338,8 @@
       <div class="campaign__inner inner">
 
         <div class="campaign__title section-title">
-          <h2 class="section-title__eng">Campaign</h2>
-          <p class="section-title__ja">キャンペーン</p>
+          <p class="section-title__eng">Campaign</p>
+          <h2 class="section-title__ja">キャンペーン</h2>
         </div>
 
         <div class="swiper campaign__swiper js-campaign__swiper">
@@ -467,8 +467,8 @@
       <div class="about__inner inner">
 
         <div class="campaign__title section-title">
-          <h2 class="section-title__eng">About us</h2>
-          <p class="section-title__ja">私たちについて</p>
+          <p class="section-title__eng">About us</p>
+          <h2 class="section-title__ja">私たちについて</h2>
         </div>
 
         <div class="about__images">
@@ -520,8 +520,8 @@
       <div class="info__inner inner">
 
         <div class="info__title section-title">
-          <h2 class="section-title__eng">Information</h2>
-          <p class="section-title__ja">ダイビング情報</p>
+          <p class="section-title__eng">Information</p>
+          <h2 class="section-title__ja">ダイビング情報</h2>
         </div>
 
         <div class="info__wrap">
@@ -557,8 +557,8 @@
       <div class="blog__inner inner">
 
         <div class="blog__title section-title section-title--white">
-          <h2 class="section-title__eng">Blog</h2>
-          <p class="section-title__ja">ブログ</p>
+          <p class="section-title__eng">Blog</p>
+          <h2 class="section-title__ja">ブログ</h2>
         </div>
 
         <div class="blog__cards blog-cards">
@@ -632,8 +632,8 @@
       <div class="voice__inner inner">
 
         <div class="voice__title section-title">
-          <h2 class="section-title__eng">Voice</h2>
-          <p class="section-title__ja">お客様の声</p>
+          <p class="section-title__eng">Voice</p>
+          <h2 class="section-title__ja">お客様の声</h2>
         </div>
 
         <div class="voice__cards voice-cards">
@@ -725,8 +725,8 @@
       <div class="price__inner inner">
 
         <div class="price__title section-title">
-          <h2 class="section-title__eng">Price</h2>
-          <p class="section-title__ja">料金一覧</p>
+          <p class="section-title__eng">Price</p>
+          <h2 class="section-title__ja">料金一覧</h2>
         </div>
 
         <div class="price__wrap">
@@ -853,8 +853,8 @@
           <div class="contact__bottom">
 
             <div class="contact__title section-title">
-              <h2 class="section-title__eng">Contact</h2>
-              <p class="section-title__ja">お問い合わせ</p>
+              <p class="section-title__eng">Contact</p>
+              <h2 class="section-title__ja">お問い合わせ</h2>
             </div>
 
             <div class="contact__msg">
