--- a/src/index.html
+++ b/src/index.html
@@ -466,7 +466,7 @@
     <section id="about" class="about">
       <div class="about__inner inner">
 
-        <div class="campaign__title section-title">
+        <div class="about__title section-title">
           <p class="section-title__eng">About us</p>
           <h2 class="section-title__ja">私たちについて</h2>
         </div>
@@ -498,7 +498,7 @@
             <div class="about__text">
               <p class="about__text-text text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
               </p>
             </div>
 
@@ -564,7 +564,7 @@
         <div class="blog__cards blog-cards">
 
           <div class="blog__card blog-card">
-            <a href="#">
+            <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_1.jpg" alt="ピンクの珊瑚礁の写真">
               </div>
@@ -582,7 +582,7 @@
           </div>
 
           <div class="blog__card blog-card">
-            <a href="#">
+            <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_2.jpg" alt="海亀が海中を泳いでいる様子">
               </div>
@@ -600,7 +600,7 @@
           </div>
 
           <div class="blog__card blog-card">
-            <a href="#">
+            <a class="blog-card__link" href="#">
               <div class="blog-card__img">
                 <img src="./assets/images/common/blog_3.jpg" alt="イソギンチャクに隠れているカクレクマノミ">
               </div>
