--- a/src/index.html
+++ b/src/index.html
@@ -473,16 +473,16 @@
 
         <div class="about__images">
 
-          <div class="about__image-large">
-            <picture>
-              <source srcset="./assets/images/common/about_pc_large.jpg" media="(min-width:768px)">
-              <img src="./assets/images/common/about_sp_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
-            </picture>
-          </div>
           <div class="about__image-small">
             <picture>
               <source srcset="./assets/images/common/about_pc_small.jpg" media="(min-width:768px)">
               <img src="./assets/images/common/about_sp_small.jpg" alt="赤茶色の屋根に乗っているシーサーと青空">
+            </picture>
+          </div>
+          <div class="about__image-large">
+            <picture>
+              <source srcset="./assets/images/common/about_pc_large.jpg" media="(min-width:768px)">
+              <img src="./assets/images/common/about_sp_large.jpg" alt="黄色と黒の2匹に鮮やかな熱帯魚が泳いでいる様子">
             </picture>
           </div>
 
@@ -498,7 +498,7 @@
             <div class="about__text">
               <p class="about__text-text text">
                 ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。<br>
-                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。
+                ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキストが入ります。ここにテキスト
               </p>
             </div>
 
