fix：Aboutの表示崩れの修正

--- a/src/index.html
+++ b/src/index.html
@@ -491,7 +491,7 @@
         <div class="about__content">
 
           <div class="about__subtitle">
-            <p class="about__subtitle-text">Dive into<br>the Ocean</p>
+            <p class="about__subtitle-text">Dive&nbsp;into<br>the&nbsp;Ocean</p>
           </div>
 
           <div class="about__wrap">
