fix：campaign-cardでテキストが増減してもデザインを保つ

--- a/src/index.html
+++ b/src/index.html
@@ -356,6 +356,8 @@
                 <div class="campaign-card__title title-line">
                   <p class="campaign-card__title-text text">ライセンス取得</p>
                 </div>
+              </div>
+              <div class="campaign-card__foot">
                 <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
@@ -381,6 +383,8 @@
                 <div class="campaign-card__title  title-line">
                   <p class="campaign-card__title-text text">貸切体験ダイビング</p>
                 </div>
+              </div>
+              <div class="campaign-card__foot">
                 <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
@@ -406,6 +410,8 @@
                 <div class="campaign-card__title  title-line">
                   <p class="campaign-card__title-text text">ナイトダイビング</p>
                 </div>
+              </div>
+              <div class="campaign-card__foot">
                 <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
@@ -431,6 +437,8 @@
                 <div class="campaign-card__title  title-line">
                   <p class="campaign-card__title-text text">貸切ファンダイビング</p>
                 </div>
+              </div>
+              <div class="campaign-card__foot">
                 <div class="campaign-card__offer">
                   <p>全部コミコミ(お一人様)</p>
                 </div>
@@ -453,12 +461,12 @@
           <div class="swiper-button-next campaign__button-next"></div>
         </div>
 
-      </div>
+        <div class="campaign__btn">
+          <a href="#" class="button">
+            <p>View more</p>
+          </a>
+        </div>
 
-      <div class="campaign__btn">
-        <a href="#" class="button">
-          <p>View more</p>
-        </a>
       </div>
 
     </section>
