sectionの余白の取り方を修正

--- a/src/index.html
+++ b/src/index.html
@@ -331,7 +331,7 @@
       </div>
     </div>
 
-    <section id="campaign" class="campaign">
+    <section id="campaign" class="campaign layout-campaign">
       <div class="campaign__inner inner">
 
         <div class="campaign__title section-title">
@@ -468,7 +468,7 @@
 
     </section>
 
-    <section id="about" class="about">
+    <section id="about" class="about layout-about">
       <div class="about__inner inner">
 
         <div class="about__title section-title">
@@ -521,7 +521,7 @@
 
     </section>
 
-    <section id="info" class="info">
+    <section id="info" class="info layout-info">
       <div class="info__inner inner">
 
         <div class="info__title section-title">
@@ -558,7 +558,7 @@
 
     </section>
 
-    <section id="blog" class="blog">
+    <section id="blog" class="blog layout-blog">
       <div class="blog__inner inner">
 
         <div class="blog__title section-title section-title--white">
@@ -633,7 +633,7 @@
       </div>
     </section>
 
-    <section id="voice" class="voice">
+    <section id="voice" class="voice layout-voice">
       <div class="voice__inner inner">
 
         <div class="voice__title section-title">
@@ -726,7 +726,7 @@
       </div>
     </section>
 
-    <section id="price" class="price">
+    <section id="price" class="price layout-price">
       <div class="price__inner inner">
 
         <div class="price__title section-title">
@@ -827,7 +827,7 @@
       </div>
     </section>
 
-    <section id="contact" class="contact">
+    <section id="contact" class="contact layout-contact">
       <div class="contact__inner inner">
 
         <div class="contact__content">
